--- a/pages/catalogue.html
+++ b/pages/catalogue.html
@@ -1,1 +1,75 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Online Store - Catalogue</title>
+    <link rel="stylesheet" href="../css/reset.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <script defer src="../js/main.js"></script>
+  </head>
+  <body>
+    <header class="header">
+      <div class="container flex__header">
+        <div class="left__header">
+          <div class="logo">
+            <a href="#"
+              ><img src="../images/logo.png" alt="logo" width="44" height="38"
+            /></a>
+          </div>
+          <div class="search__container">
+            <button class="search__btn">
+              <img
+                src="../images/svg/search-loupe.svg"
+                alt="search loupe icon"
+              />
+            </button>
+            <div class="search__bar">
+              <input type="search" placeholder="Search..." required />
+              <button class="submit__btn" type="submit">Search</button>
+            </div>
+          </div>
+        </div>
+        <div class="right__header">
+          <div class="nav__container">
+            <button class="burger">
+              <img src="../images/svg/burger-menu.svg" alt="burger menu" />
+            </button>
+            <!--  MAIN MENU WILL BE RIGHT HERE
+              <nav class="navigation">
+                <ul class="main__menu">
+                  <li class="main__menu_item">
+                    <a href="" class="main__menu_link">item 1</a>
+                  </li>
+                  <li class="main__menu_item">
+                    <a href="" class="main__menu_link">item 2</a>
+                  </li>
+                  <li class="main__menu_item">
+                    <a href="" class="main__menu_link">item 3</a>
+                  </li>
+                  <li class="main__menu_item">
+                    <a href="" class="main__menu_link">item 4</a>
+                  </li>
+                  <li class="main__menu_item">
+                    <a href="" class="main__menu_link">item 5</a>
+                  </li>
+                </ul>
+              </nav> -->
+          </div>
+          <div class="user__profile">
+            <img src="../images/svg/user-profile.svg" alt="User icon" />
+          </div>
+          <div class="shopping__basket">
+            <img
+              src="../images/svg/shopping-basket.svg"
+              alt="shopping basket icon"
+            />
+            <!-- POSTPONED FOR LATER  
+                <span>5</span> -->
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
+</html>
