Added CATALOGUE section(cards,filters,pagination) + styles

--- a/pages/catalogue.html
+++ b/pages/catalogue.html
@@ -92,6 +92,211 @@
           </ul>
         </div>
       </section>
+      <section class="catalogue">
+        <div class="container catalogue__container">
+          <div class="catalogue__filter_bar">
+            <div class="main__filter">
+              <details class="main__filter_content">
+                <summary>
+                  <span class="filter-icon">Filter</span>
+                </summary>
+                <details class="sub__filter_content">
+                  <summary>
+                    <span>Category</span>
+                    <ul class="category__list">
+                      <li><a href="#">Accessories</a></li>
+                      <li><a href="#">Bags</a></li>
+                      <li><a href="#">Denim</a></li>
+                      <li><a href="#">Hoodies & Sweatshirts</a></li>
+                      <li><a href="#">Jackets & Coats</a></li>
+                      <li><a href="#">Polos</a></li>
+                      <li><a href="#">Shirts</a></li>
+                      <li><a href="#">Shoes</a></li>
+                      <li><a href="#">Sweaters & Knits</a></li>
+                      <li><a href="#">T-Shirts</a></li>
+                      <li><a href="#">Tanks</a></li>
+                    </ul>
+                  </summary>
+                </details>
+                <details class="sub__filter_content">
+                  <summary>
+                    <span>Brand</span>
+                  </summary>
+                </details>
+                <details class="sub__filter_content">
+                  <summary>
+                    <span>Designer</span>
+                  </summary>
+                </details>
+              </details>
+            </div>
+            <div class="other__filters">
+              <div class="trend-filter">
+                <span>Trending Now</span>
+              </div>
+              <div class="size-filter">
+                <span>Size</span>
+                <div class="size-filter-container">
+                  <div class="size-filter-checkbox">
+                    <input type="checkbox" name="XS" id="XS" />
+                    <label for="XS">XS</label>
+                  </div>
+                  <div class="size-filter-checkbox">
+                    <input type="checkbox" name="S" id="S" />
+                    <label for="S">S</label>
+                  </div>
+                  <div class="size-filter-checkbox">
+                    <input type="checkbox" name="M" id="M" />
+                    <label for="M">M</label>
+                  </div>
+                  <div class="size-filter-checkbox">
+                    <input type="checkbox" name="L" id="L" />
+                    <label for="L">L</label>
+                  </div>
+                </div>
+              </div>
+              <div class="price-filter">
+                <span>Price</span>
+              </div>
+            </div>
+          </div>
+          <div class="features__box">
+            <div class="features__box_item">
+              <img src="../images/featuresImage_1.jpg" alt="featured image" />
+              <h4>ELLERY X M'O CAPSULE</h4>
+              <p>
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda
+                Operandi.
+              </p>
+              <span>$52.00</span>
+              <div class="features__box_item-add-cart">
+                <a href="#"><span>Add to Cart</span></a>
+              </div>
+            </div>
+            <div class="features__box_item">
+              <img src="../images/featuresImage_7.jpg" alt="featured image" />
+              <h4>ELLERY X M'O CAPSULE</h4>
+              <p>
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda
+                Operandi.
+              </p>
+              <span>$52.00</span>
+              <div class="features__box_item-add-cart">
+                <a href="#"><span>Add to Cart</span></a>
+              </div>
+            </div>
+            <div class="features__box_item">
+              <img src="../images/featuresImage_3.jpg" alt="featured image" />
+              <h4>ELLERY X M'O CAPSULE</h4>
+              <p>
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda
+                Operandi.
+              </p>
+              <span>$52.00</span>
+              <div class="features__box_item-add-cart">
+                <a href="#"><span>Add to Cart</span></a>
+              </div>
+            </div>
+            <div class="features__box_item">
+              <img src="../images/featuresImage_4.jpg" alt="featured image" />
+              <h4>ELLERY X M'O CAPSULE</h4>
+              <p>
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda
+                Operandi.
+              </p>
+              <span>$52.00</span>
+              <div class="features__box_item-add-cart">
+                <a href="#"><span>Add to Cart</span></a>
+              </div>
+            </div>
+            <div class="features__box_item">
+              <img src="../images/featuresImage_8.jpg" alt="featured image" />
+              <h4>ELLERY X M'O CAPSULE</h4>
+              <p>
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda
+                Operandi.
+              </p>
+              <span>$52.00</span>
+              <div class="features__box_item-add-cart">
+                <a href="#"><span>Add to Cart</span></a>
+              </div>
+            </div>
+            <div class="features__box_item">
+              <img src="../images/featuresImage_9.jpg" alt="featured image" />
+              <h4>ELLERY X M'O CAPSULE</h4>
+              <p>
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda
+                Operandi.
+              </p>
+              <span>$52.00</span>
+              <div class="features__box_item-add-cart">
+                <a href="#"><span>Add to Cart</span></a>
+              </div>
+            </div>
+            <div class="features__box_item">
+              <img src="../images/featuresImage_10.jpg" alt="featured image" />
+              <h4>ELLERY X M'O CAPSULE</h4>
+              <p>
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda
+                Operandi.
+              </p>
+              <span>$52.00</span>
+              <div class="features__box_item-add-cart">
+                <a href="#"><span>Add to Cart</span></a>
+              </div>
+            </div>
+            <div class="features__box_item">
+              <img src="../images/featuresImage_11.jpg" alt="featured image" />
+              <h4>ELLERY X M'O CAPSULE</h4>
+              <p>
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda
+                Operandi.
+              </p>
+              <span>$52.00</span>
+              <div class="features__box_item-add-cart">
+                <a href="#"><span>Add to Cart</span></a>
+              </div>
+            </div>
+            <div class="features__box_item">
+              <img src="../images/featuresImage_12.jpg" alt="featured image" />
+              <h4>ELLERY X M'O CAPSULE</h4>
+              <p>
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda
+                Operandi.
+              </p>
+              <span>$52.00</span>
+              <div class="features__box_item-add-cart">
+                <a href="#"><span>Add to Cart</span></a>
+              </div>
+            </div>
+          </div>
+          <nav class="page__pagination">
+            <ul class="pagination__list">
+              <li>
+                <a href="#"><span class="left__handler"></span></a>
+              </li>
+              <li><a href="#" class="active">1</a></li>
+              <li><a href="#">2</a></li>
+              <li><a href="#">3</a></li>
+              <li><a href="#">4</a></li>
+              <li><a href="#">5</a></li>
+              <li><a href="#">6...20</a></li>
+              <li>
+                <a href="#"><span class="right__handler"></span></a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </section>
     </main>
   </body>
 </html>
