Fixed missing margin bottom 96px after pagination + added ADVANTAGES section

--- a/pages/catalogue.html
+++ b/pages/catalogue.html
@@ -297,6 +297,60 @@
           </nav>
         </div>
       </section>
+      <section class="advantages">
+        <div class="container advantages__container">
+          <div class="advantages__item">
+            <span class="delivery"></span>
+            <h4>Free Delivery</h4>
+            <p>
+              Worldwide delivery on all. Authorit tively morph next-generation
+              innov tion with extensive models.
+            </p>
+          </div>
+          <div class="advantages__item">
+            <span class="discounts"></span>
+            <h4>Sales & discounts</h4>
+            <p>
+              Worldwide delivery on all. Authorit tively morph next-generation
+              innov tion with extensive models.
+            </p>
+          </div>
+          <div class="advantages__item">
+            <span class="quality"></span>
+            <h4>Quality assurance</h4>
+            <p>
+              Worldwide delivery on all. Authorit tively morph next-generation
+              innov tion with extensive models.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="make__contact">
+        <div class="container make__contact_container">
+          <div class="testimonial">
+            <img
+              src="../images/testimonial.png"
+              width="96"
+              height="96"
+              alt="Eva Doe"
+            />
+            <p>
+              “Vestibulum quis porttitor dui! Quisque viverra nunc mi, a
+              pulvinar purus condimentum“
+            </p>
+          </div>
+          <div class="subscribe">
+            <h3>
+              <span>SUBSCRIBE</span><br />
+              FOR OUR NEWLETTER AND PROMOTION
+            </h3>
+            <div class="subscribe__input">
+              <input type="email" placeholder="Enter Your Email" />
+              <input type="submit" value="Subscribe" />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
