Added FOOTER -> Working on catalogue page for desktop pc finished!

--- a/pages/catalogue.html
+++ b/pages/catalogue.html
@@ -352,5 +352,18 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="container footer__container">
+        <div class="copyright">
+          <p>© 2021 Brand All Rights Reserved.</p>
+        </div>
+        <div class="social">
+          <a href="#"><span class="social__icon facebook"></span></a>
+          <a href="#"><span class="social__icon instagram"></span></a>
+          <a href="#"><span class="social__icon pinterest"></span></a>
+          <a href="#"><span class="social__icon twitter"></span></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
