--- a/pages/product.html
+++ b/pages/product.html
@@ -71,5 +71,27 @@
         </div>
       </div>
     </header>
+    <main>
+      <section class="page__heading">
+        <div class="container heading__container">
+          <h1>New arrivals</h1>
+          <ul class="heading__breadcrumbs">
+            <li class="heading__breadcrumbs_item">
+              <a href="#" class="heading__breadcrumbs_link"> Home&nbsp; </a>
+            </li>
+            <li class="heading__breadcrumbs_item">
+              <a href="#" class="heading__breadcrumbs_link">
+                &nbsp;Men&nbsp;
+              </a>
+            </li>
+            <li class="heading__breadcrumbs_item">
+              <a href="#" class="heading__breadcrumbs_link active">
+                &nbsp;New Arrivals
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
