--- a/pages/product.html
+++ b/pages/product.html
@@ -74,7 +74,7 @@
     <main>
       <section class="page__heading">
         <div class="container heading__container">
-          <h1>New arrivals</h1>
+          <h4>New arrivals</h4>
           <ul class="heading__breadcrumbs">
             <li class="heading__breadcrumbs_item">
               <a href="#" class="heading__breadcrumbs_link"> Home&nbsp; </a>
@@ -92,6 +92,152 @@
           </ul>
         </div>
       </section>
+      <section class="product">
+        <div class="product__slider">
+          <span class="product__handler">
+            <svg
+              width="12"
+              height="21"
+              viewBox="0 0 9 14"
+              fill="black"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M8.995 2L3.995 7L8.995 12L7.995 14L0.994995 7L7.995 0L8.995 2Z"
+                fill=""
+              />
+            </svg>
+          </span>
+          <div class="product__image">
+            <img src="../images/product-image.jpg" alt="product image" />
+          </div>
+          <span class="product__handler">
+            <svg
+              width="12"
+              height="21"
+              viewBox="0 0 9 14"
+              fill="black"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M0.994995 12L5.995 7L0.994995 2L1.995 0L8.995 7L1.995 14L0.994995 12Z"
+                fill=""
+              />
+            </svg>
+          </span>
+        </div>
+      </section>
+      <section class="product__info">
+        <div class="container">
+          <div class="product__content">
+            <div class="product__description">
+              <h2>WOMEN COLLECTION</h2>
+              <span></span>
+              <h1>MOSCHINO CHEAP AND CHIC</h1>
+              <p class="product__text">
+                Compellingly actualize fully researched processes before
+                proactive outsourcing. Progressively syndicate collaborative
+                architectures before cutting-edge services. Completely visualize
+                parallel core competencies rather than exceptional portals.
+              </p>
+              <p class="product__price">$561</p>
+              <div class="decor"></div>
+              <div class="product__options">
+                <div class="product__color__option">
+                  <span>Choose color</span>
+                </div>
+                <div class="product__size__option">
+                  <span>Choose size</span>
+                </div>
+                <div class="product__quantity__option">
+                  <span>Quantity</span>
+                </div>
+              </div>
+              <button class="cart__btn"><span></span>Add to Cart</button>
+            </div>
+          </div>
+          <div class="features__box">
+            <div class="features__box_item">
+              <img src="../images/featuresImage_4.jpg" alt="featured image" />
+              <h4>ELLERY X M'O CAPSULE</h4>
+              <p>
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda
+                Operandi.
+              </p>
+              <span>$52.00</span>
+              <div class="features__box_item-add-cart">
+                <a href="#"><span>Add to Cart</span></a>
+              </div>
+            </div>
+            <div class="features__box_item">
+              <img src="../images/featuresImage_3.jpg" alt="featured image" />
+              <h4>ELLERY X M'O CAPSULE</h4>
+              <p>
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda
+                Operandi.
+              </p>
+              <span>$52.00</span>
+              <div class="features__box_item-add-cart">
+                <a href="#"><span>Add to Cart</span></a>
+              </div>
+            </div>
+            <div class="features__box_item">
+              <img src="../images/featuresImage_6.jpg" alt="featured image" />
+              <h4>ELLERY X M'O CAPSULE</h4>
+              <p>
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda
+                Operandi.
+              </p>
+              <span>$52.00</span>
+              <div class="features__box_item-add-cart">
+                <a href="#"><span>Add to Cart</span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="make__contact">
+        <div class="container make__contact_container">
+          <div class="testimonial">
+            <img
+              src="../images/testimonial.png"
+              width="96"
+              height="96"
+              alt="Eva Doe"
+            />
+            <p>
+              “Vestibulum quis porttitor dui! Quisque viverra nunc mi, a
+              pulvinar purus condimentum“
+            </p>
+          </div>
+          <div class="subscribe">
+            <h3>
+              <span>SUBSCRIBE</span><br />
+              FOR OUR NEWLETTER AND PROMOTION
+            </h3>
+            <div class="subscribe__input">
+              <input type="email" placeholder="Enter Your Email" />
+              <input type="submit" value="Subscribe" />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="container footer__container">
+        <div class="copyright">
+          <p>© 2021 Brand All Rights Reserved.</p>
+        </div>
+        <div class="social">
+          <a href="#"><span class="social__icon facebook"></span></a>
+          <a href="#"><span class="social__icon instagram"></span></a>
+          <a href="#"><span class="social__icon pinterest"></span></a>
+          <a href="#"><span class="social__icon twitter"></span></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
