Added PAGE HEADING section

--- a/pages/shopping-cart.html
+++ b/pages/shopping-cart.html
@@ -71,5 +71,12 @@
         </div>
       </div>
     </header>
+    <main>
+      <section class="page__heading">
+        <div class="container heading__container">
+          <h4>Shopping Cart</h4>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
