--- a/pages/registration.html
+++ b/pages/registration.html
@@ -71,5 +71,12 @@
         </div>
       </div>
     </header>
+    <main>
+      <section class="page__heading">
+        <div class="container heading__container">
+          <h1>Registration</h1>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
