--- a/pages/registration.html
+++ b/pages/registration.html
@@ -144,6 +144,45 @@
           </div>
         </div>
       </section>
+      <section class="make__contact">
+        <div class="container make__contact_container">
+          <div class="testimonial">
+            <img
+              src="../images/testimonial.png"
+              width="96"
+              height="96"
+              alt="Eva Doe"
+            />
+            <p>
+              “Vestibulum quis porttitor dui! Quisque viverra nunc mi, a
+              pulvinar purus condimentum“
+            </p>
+          </div>
+          <div class="subscribe">
+            <h3>
+              <span>SUBSCRIBE</span><br />
+              FOR OUR NEWLETTER AND PROMOTION
+            </h3>
+            <div class="subscribe__input">
+              <input type="email" placeholder="Enter Your Email" />
+              <input type="submit" value="Subscribe" />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="container footer__container">
+        <div class="copyright">
+          <p>© 2021 Brand All Rights Reserved.</p>
+        </div>
+        <div class="social">
+          <a href="#"><span class="social__icon facebook"></span></a>
+          <a href="#"><span class="social__icon instagram"></span></a>
+          <a href="#"><span class="social__icon pinterest"></span></a>
+          <a href="#"><span class="social__icon twitter"></span></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
