Added links on all pages

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="container flex__header">
         <div class="left__header">
           <div class="logo">
-            <a href="#"
+            <a href="index.html"
               ><img src="images/logo.png" alt="logo" width="44" height="38"
             /></a>
           </div>
@@ -55,13 +55,16 @@
             </nav> -->
           </div>
           <div class="user__profile">
-            <img src="images/svg/user-profile.svg" alt="User icon" />
+            <a href="pages/registration.html"
+              ><img src="images/svg/user-profile.svg" alt="User icon"
+            /></a>
           </div>
           <div class="shopping__basket">
-            <img
-              src="images/svg/shopping-basket.svg"
-              alt="shopping basket icon"
-            />
+            <a href="pages/shopping-cart.html"
+              ><img
+                src="images/svg/shopping-basket.svg"
+                alt="shopping basket icon"
+            /></a>
             <!-- POSTPONED FOR LATER  
               <span>5</span> -->
           </div>
@@ -88,10 +91,12 @@
             </h4>
           </div>
           <div class="product__category men">
-            <h4>
-              <span>Hot deal</span>
-              for Men
-            </h4>
+            <a href="pages/product.html">
+              <h4>
+                <span>Hot deal</span>
+                for Men
+              </h4>
+            </a>
           </div>
           <div class="product__category kids">
             <h4>
@@ -191,7 +196,9 @@
               </div>
             </div>
           </div>
-          <a class="features__btn" href="#">Browse All Products</a>
+          <a class="features__btn" href="pages/catalogue.html"
+            >Browse All Products</a
+          >
         </div>
       </section>
       <section class="advantages">
