--- a/pages/registration.html
+++ b/pages/registration.html
@@ -14,7 +14,7 @@
       <div class="container flex__header">
         <div class="left__header">
           <div class="logo">
-            <a href="#"
+            <a href="../index.html"
               ><img src="../images/logo.png" alt="logo" width="44" height="38"
             /></a>
           </div>
@@ -61,10 +61,12 @@
             <img src="../images/svg/user-profile.svg" alt="User icon" />
           </div>
           <div class="shopping__basket">
-            <img
-              src="../images/svg/shopping-basket.svg"
-              alt="shopping basket icon"
-            />
+            <a href="../pages/shopping-cart.html">
+              <img
+                src="../images/svg/shopping-basket.svg"
+                alt="shopping basket icon"
+              />
+            </a>
             <!-- POSTPONED FOR LATER  
                       <span>5</span> -->
           </div>
