--- a/pages/shopping-cart.html
+++ b/pages/shopping-cart.html
@@ -14,7 +14,7 @@
       <div class="container flex__header">
         <div class="left__header">
           <div class="logo">
-            <a href="#"
+            <a href="../index.html"
               ><img src="../images/logo.png" alt="logo" width="44" height="38"
             /></a>
           </div>
@@ -58,7 +58,9 @@
                   </nav> -->
           </div>
           <div class="user__profile">
-            <img src="../images/svg/user-profile.svg" alt="User icon" />
+            <a href="../pages/registration.html">
+              <img src="../images/svg/user-profile.svg" alt="User icon" />
+            </a>
           </div>
           <div class="shopping__basket">
             <img
@@ -134,7 +136,9 @@
             </div>
             <div class="purchase__buttons">
               <button>Clear shopping cart</button>
-              <button>Continue shopping</button>
+              <a href="../pages/catalogue.html"
+                ><button>Continue shopping</button>
+              </a>
             </div>
           </div>
           <div class="shipping">
