--- a/pages/catalogue.html
+++ b/pages/catalogue.html
@@ -14,9 +14,9 @@
       <div class="container flex__header">
         <div class="left__header">
           <div class="logo">
-            <a href="#"
-              ><img src="../images/logo.png" alt="logo" width="44" height="38"
-            /></a>
+            <a href="../index.html">
+              <img src="../images/logo.png" alt="logo" width="44" height="38" />
+            </a>
           </div>
           <div class="search__container">
             <button class="search__btn">
@@ -58,13 +58,17 @@
               </nav> -->
           </div>
           <div class="user__profile">
-            <img src="../images/svg/user-profile.svg" alt="User icon" />
+            <a href="../pages/registration.html">
+              <img src="../images/svg/user-profile.svg" alt="User icon" />
+            </a>
           </div>
           <div class="shopping__basket">
-            <img
-              src="../images/svg/shopping-basket.svg"
-              alt="shopping basket icon"
-            />
+            <a href="../pages/shopping-cart.html">
+              <img
+                src="../images/svg/shopping-basket.svg"
+                alt="shopping basket icon"
+              />
+            </a>
             <!-- POSTPONED FOR LATER  
                 <span>5</span> -->
           </div>
